fix overflow and readme

--- a/styles.scss
+++ b/styles.scss
@@ -5,6 +5,7 @@
 body, main, html {
   margin: auto;
   max-width: 1200px;
+  overflow-x: hidden;
 }
 
 body {
@@ -13,6 +14,9 @@ body {
 
 h2 {
   margin-left: 8px;
+  @media screen and (max-width: 500px) {
+    margin-left: 0;
+  }
 }
 
 h3 {
@@ -53,6 +57,9 @@ h3 {
   @media screen and (min-width: 500px) {
     width: 50%;
   }
+  @media screen and (max-width: 500px) {
+    padding: 5px;
+  }
 }
 
 .separator-left {
@@ -63,6 +70,9 @@ button {
   margin: 10px;
   border-style: none;
   --color: #560bad;
+  @media screen and (max-width: 500px) {
+    margin: 0 0 10px 0;
+  }
 }
 
 .etiquette {
