--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
 body, main, html {
   margin: auto;
   max-width: 1200px;
+  overflow-x: hidden;
 }
 
 body {
@@ -13,6 +14,11 @@ body {
 
 h2 {
   margin-left: 8px;
+}
+@media screen and (max-width: 500px) {
+  h2 {
+    margin-left: 0;
+  }
 }
 
 h3 {
@@ -55,6 +61,11 @@ h3 {
     width: 50%;
   }
 }
+@media screen and (max-width: 500px) {
+  .section {
+    padding: 5px;
+  }
+}
 
 .separator-left {
   border-left: 2px solid #f6ebff;
@@ -64,6 +75,11 @@ button {
   margin: 10px;
   border-style: none;
   --color: #560bad;
+}
+@media screen and (max-width: 500px) {
+  button {
+    margin: 0 0 10px 0;
+  }
 }
 
 .etiquette {
